---------------------------------------------------------------------------------------------------
Version: 4.2.3
Date: ????
  Bugfixes:
    - Fixed alert_icon_scale and shift not being imported correctly
---------------------------------------------------------------------------------------------------
Version: 4.2.2
Date: 2024.11.23
  Changes:
    - Unified setAnimation() and setWorkingVis() into setGraphics()
  Bugfixes:
    - Fixed that graphics_set was not loaded in some cases when importing entities
---------------------------------------------------------------------------------------------------
Version: 4.2.1
Date: 2024.11.23
  Bugfixes:
    - Fixed that input amounts were not correctly set for chained recipes
---------------------------------------------------------------------------------------------------
Version: 4.2.0
Date: 2024.11.19
  Changes:
    - Updated fopr factorio 2.0
---------------------------------------------------------------------------------------------------
Version: 4.1.41
Date: 2024.06.04
  Bugfixes:
    - Fix icon_scale typo
---------------------------------------------------------------------------------------------------
Version: 4.1.40
Date: 2023.12.28
  Changes:
    - Avoid using dump() and load() to copy function objects
---------------------------------------------------------------------------------------------------
Version: 4.1.39
Date: 2023.11.05
  Changes:
    - omni.lib.remove_prerequisite() now returns whether the removement was successfull
    - omni.lib.replace_prerequisite() will only add the replacement if it does not already exist
    - simplify omni.lib.add_science_pack() - only accept strings as second argument
    - simplify omni.lib.replace_science_pack() - no longer default to "omni-pack"
---------------------------------------------------------------------------------------------------
Version: 4.1.38
Date: 2023.08.24
  Features: